--- a/sass/layout/_general-layout.scss
+++ b/sass/layout/_general-layout.scss
@@ -38,7 +38,7 @@ body{
         flex-wrap: wrap;
 
         .secret-word{
-            color: rgba(0, 0, 0, 0.874);
+            color: rgba(0, 0, 0, 0);
             transition: color 350ms;
             min-width: 200px;
             min-height: 15px;
@@ -59,6 +59,10 @@ body{
     #parchment{
         height: 550px;
         width: 550px;
+
+        .secret-word{
+            margin-top: 8px;
+        }
     }
 }
         
